test/integration/page-config/pages/invalid/invalid-value.js
const amp = 'hybrid'

const InvalidValue = () => <p>hello ${amp}</p>

// export const config = { amp }

export default InvalidValue
